--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -1,5 +1,5 @@
 // $font-stack: "Consolas", "Segoe UI", "Helvetica"
-$font-stack: "Consolas"
+$font-stack: "Helvetica"
 $text-color: #fff
 $text-color-secondary: #a6a6a6
 $body-bg-color: #271b31
