--- a/src/styles/components/informationcontainer.sass
+++ b/src/styles/components/informationcontainer.sass
@@ -25,7 +25,7 @@
             font-size: .8rem
             margin-bottom: .5rem
 
-        p
+        p, a
             color: variables.$text-color
             font-weight: bold
         
@@ -44,4 +44,3 @@
 
         #pin-icon
             color: #c17ceb
-
