--- a/src/styles/components/informationcontainer.sass
+++ b/src/styles/components/informationcontainer.sass
@@ -22,7 +22,7 @@
 
         h3
             color: variables.$text-color-secondary
-            font-size: .8rem
+            font-size: 1rem
             margin-bottom: .5rem
 
         p, a
