--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -1,5 +1,6 @@
 // $font-stack: "Consolas", "Segoe UI", "Helvetica"
-$font-stack: ['Consolas', 'Helvetica', 'Tahoma']
+$font-stack: ['Comic Sans MS', 'Consolas', 'Helvetica', 'Tahoma']
+$font-stack-secondary: ['Consolas', 'Helvetica', 'Tahoma']
 $text-color: #fff
 $text-color-secondary: #a6a6a6
 $body-bg-color: #271b31
