--- a/src/styles/components/socialnetworks.sass
+++ b/src/styles/components/socialnetworks.sass
@@ -3,6 +3,7 @@
 
 #social-networks
     @include mixins.center
+    font-family: variables.$font-stack-secondary
     gap: 1rem
     margin: 1rem 0
 
@@ -27,4 +28,3 @@
         background: variables.$gradient
         > svg
             color: variables.$text-color
-            
